# Atlassian-MCP

./: .env.example  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
atlassian_mcp/: __init__.py  __main__.py  cli.py  client.py
